# NeuralGS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Activator.hpp  Layer.hpp  Loss.hpp  Model.hpp  Optimizer.hpp
src/: Layer.cpp  Model.cpp
src/Activators/: ReLu.cpp  Sigmoid.cpp  Softmax.cpp
src/Losses/: BinaryCrossentropy.cpp  CategoricalCrossentropy.cpp
src/Optimizers/: AdaGrad.cpp  Adam.cpp  RMSprop.cpp  SGD.cpp
